# passhouse

./: README.md  pyproject.toml
docs/: PROJECT_BRIEF.md
src/passhouse/: __init__.py  cli.py  core.py
tests/: test_core.py
